# bigwave

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bigwave.cabal  flake.nix
app/: Main.hs
src/: Bigwave.hs
